@startuml SGISI - Diagrama de Clases - Capas DAO, Servicio y Presentación

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor      #2C6EA6
  ArrowColor       #555555
  FontSize         10
}
skinparam interface {
  BackgroundColor #D6EAF8
  BorderColor     #2C6EA6
}
skinparam package {
  BackgroundColor #F8F9F9
  BorderColor     #AAB7B8
  FontSize        11
  FontStyle       bold
}
skinparam arrow {
  FontSize 9
}

' ================================================================
' CAPA UTIL
' ================================================================
package "util" {
  class ConexionDB <<Singleton>>
  class HashUtil
}

' ================================================================
' CAPA DAO – Interfaces
' ================================================================
package "dao" {
  interface IncidenteDAO
  interface UsuarioDAO
  interface CatalogoDAO
  interface BitacoraDAO
  interface SlaDAO
}

' ================================================================
' CAPA DAO – Implementaciones JDBC
' ================================================================
package "dao.impl" {
  class IncidenteJDBC
  class UsuarioJDBC
  class CatalogoJDBC
  class BitacoraJDBC
  class SlaJDBC

  IncidenteJDBC ..|> IncidenteDAO
  UsuarioJDBC   ..|> UsuarioDAO
  CatalogoJDBC  ..|> CatalogoDAO
  BitacoraJDBC  ..|> BitacoraDAO
  SlaJDBC       ..|> SlaDAO

  IncidenteJDBC --> ConexionDB
  UsuarioJDBC   --> ConexionDB
  CatalogoJDBC  --> ConexionDB
  BitacoraJDBC  --> ConexionDB
  SlaJDBC       --> ConexionDB
}

' ================================================================
' CAPA DE SERVICIO
' ================================================================
package "servicio" {
  class AuthService
  class IncidenteService
  class CatalogoService
  class GestorSLA

  AuthService      --> UsuarioDAO
  IncidenteService --> IncidenteDAO
  IncidenteService --> BitacoraDAO
  IncidenteService --> GestorSLA
  CatalogoService  --> CatalogoDAO
  GestorSLA        --> SlaDAO
}

' ================================================================
' CAPA DE PRESENTACIÓN
' ================================================================
package "presentacion" {
  class VentanaPrincipal
  class DialogLogin
  class PanelListaIncidentes
  class FormRegistroIncidente
  class DialogCambioEstado
  class UiStyles

  VentanaPrincipal      --> PanelListaIncidentes
  PanelListaIncidentes  --> FormRegistroIncidente
  PanelListaIncidentes  --> DialogCambioEstado
  DialogLogin           --> AuthService
  PanelListaIncidentes  --> IncidenteService
  PanelListaIncidentes  --> CatalogoService
  FormRegistroIncidente --> IncidenteService
  FormRegistroIncidente --> CatalogoService
  DialogCambioEstado    --> IncidenteService
}

@enduml
